K8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twspostgresqldeployment
  namespace: tws1-three-tier
  labels:
    app: twspostgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twspostgresql
  template:
    metadata:
      labels:
        app: twspostgresql
    spec:
      containers:
      - name: twspostgresqlcontainer
        image: postgres:13-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: twspostgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: twspostgresqlservice
  namespace: tws1-three-tier
spec:
  selector:
    app: twspostgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
